# nalchi

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cd-pc.yml  deploy-docs.yml
doc/: Doxyfile
downloaded-licenses/: README.txt
include/nalchi/: alloca.hpp  bit_stream.hpp  bit_stream_flat.hpp  character.hpp  concepts.hpp  export.h  payload.h  shared_payload.hpp  shared_payload_flat.hpp  socket_extensions.hpp  socket_extensions_flat.hpp  type_traits.hpp  typed_input_range.hpp
sdk/: README.md
src/: CSteamNetworkingMessage.hpp  aligned_alloc.hpp  bit_stream.cpp  bit_stream_flat.cpp  byteswap.hpp  math.hpp  payload.cpp  server.cpp  shared_payload.cpp  shared_payload_flat.cpp  socket_extensions.cpp  socket_extensions_flat.cpp
tests/: CMakeLists.txt  assert.hpp  init_and_kill.hpp
tests/bit_stream/: CMakeLists.txt  private_accessors.hpp  stress.cpp
tests/socket_extensions/: CMakeLists.txt  multicast_stress.cpp
